hphp/test/slow/hack_mode/closing-tag-php.php.expectf
Fatal error: A hack source file cannot contain '?>'. in %s/test/slow/hack_mode/closing-tag-php.php on line 4